# eegl-anon

./: .dockerignore  .gitignore  COPYING  COPYING.LESSER  Makefile  README.md  pyproject.toml  scratch.py  viz.py
.devcontainer/: Dockerfile  devcontainer.json
apps/: convert.py  create_default_features.py  create_index.py  create_label_features.py  create_pattern_features.py  create_random_features.py  make_labels.py  mk_controls.py  mk_orbit_labels.py  mk_orbit_variants.py  nx2lad.py  process_fullerenes.py  template.py  validate_data_partitions.py
cr/: Dockerfile  app.yml  dev.yml  docker-compose.yml  gaston.patch  gpu-template.yml  install-3rd-party.sh  multi.yml  pod-template.yml  postgres.yml  single.yml
egr/: __init__.py  classifier.py  evaluation.py  explainer.py  fullerenes.py  glasgow_subgraph_solver.py  graph_structure_utils.py  graph_utils.py  log.py  models.py  old_annotations.py  pandas_helpers.py  result.py  security.py  subgraph_isomorphism.py  tuning.py  util.py  vis.py
run_configs/: builtin_datasets.yml  c180-0.yml  c240-0.yml  c260-0.yml  c320-0.yml  c38-c1-3.yml  c500-0.yml  c540-0.yml  c60.yml  c70.yml  c720-0.yml  c74-d3h.yml  c84-d2-1.yml  controls-eval.yml  controls-gen.yml  dev.yml  g180-v2.yml  g240.yml  g300.yml  g360.yml  g420.yml  g480.yml  g540.yml  g600.yml  hexagon.yml  logic.yml  m1.yml  run_defaults.yml
scripts/: build_docker.sh  docker.sh  gaston.patch  info.sh  install-3rd-party.sh  install-deps.sh  kube.py  nb_to_pdflatex.sh  notebooks.sh  pg_test.py  pod_startup.sh  python-env.sh  read_labels.py  set_prefect_env.sh  (+1 more)
(+387 files in other folders)
